# Timetable_Scheduling

./: CMakeLists.txt  Dockerfile  README.md
include/: BruteForceUniversity.hpp  Course.hpp  DummyUniversity.hpp  HybridUniversity.hpp  Instructor.hpp  TimeSlot.hpp  TimeTable.hpp  Timer.hpp  University.hpp  UniversityMenu.hpp
samples/: sample_dataset_1.json  sample_dataset_2.json  sample_dataset_3.json
scripts/: build.sh  docker_run.sh
source/: BruteForceUniversity.cpp  CMakeLists.txt  DummyUniversity.cpp  HybridUniversity.cpp  TimeTable.cpp  University.cpp  UniversityMenu.cpp  main.cpp
test/: CMakeLists.txt  TestContents.hpp
test/source/: BruteForceUniversityTest.cpp  DummyUniversityTest.cpp  HybridSchedulerTest.cpp  TestContents.cpp
